--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.3",
     "multer": "^2.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/form-data": "^2.5.2",
     "@types/multer": "^1.4.13",
     "@types/node": "^24.0.8",
     "ts-node-dev": "^2.0.0",
