--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only server/src/app.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --project server/tsconfig.json server/src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,12 +16,14 @@
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "form-data": "^4.0.3",
+    "mime-types": "^3.0.1",
     "multer": "^2.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/form-data": "^2.5.2",
+    "@types/mime-types": "^3.0.1",
     "@types/multer": "^1.4.13",
     "@types/node": "^24.0.8",
     "ts-node-dev": "^2.0.0",
