--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "./dist",
-    "rootDir": "./server/src",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true
-  }
+  },
+  "include": ["src"]
 }
